[package]
name = "rust_factorize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_factorize"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }


[package.metadata.maturin]
python-source = "python"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test_performance"
harness = false
